--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="./Boostrap/bootstrap.min.css"  >
 </head>
 <body style="background-color: lavender;">
-    <div id="row1" class="row">
+    <div id="row1" class="row-sm">
         <h1 style="text-align: center;">ESE_GRS_WEBGL_THREEJS</h1>
     </div>
     <div id="row2" class="row">
-        <div class="col-4">
+        <div class="col-6">
             <div class="row" style="text-align: center;">
                 <div class="col">
                     <h2>Conectar al Socket</h2>
-                    <input type="text" placeholder="Socket ip">
+                    <input style="width: ;" type="text" placeholder="Socket ip">
                     <input type="number" placeholder="Puerto">
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-8" style="text-align: center;">
+        <div class="col-6" style="text-align: center;">
             <div class="row">
                 <h5>Angulos</h5>
             </div>
